--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body{
+  background: rgb(2,0,36);
+background: linear-gradient(228deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(89,0,255,1) 100%);
+}
 .App {
   text-align: center;
 }
